--- a/package.json
+++ b/package.json
@@ -1,42 +1,64 @@
 {
-  "name": "portfolio",
+  "name": "gatsby-portfolio",
   "private": true,
-  "description": "Portfolio for Katie Rose Felten",
-  "version": "0.1.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
+  "description": "Portfolio site using GatsbyJS and Wordpress REST API.",
+  "version": "1.0.0",
+  "author": "Camilo Holguin <hello@camiloholguin.me>",
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
-    "@mdx-js/mdx": "^1.5.3",
-    "@mdx-js/react": "^1.5.3",
-    "gatsby": "^2.18.17",
-    "gatsby-background-image": "^0.9.12",
-    "gatsby-image": "^2.2.37",
-    "gatsby-plugin-emotion": "^4.1.18",
-    "gatsby-plugin-mdx": "^1.0.64",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-remark-images": "^3.1.39",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-sharp": "^2.3.9",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "babel-plugin-styled-components": "^1.10.7",
+    "classnames": "^2.2.6",
+    "dotenv": "^7.0.0",
+    "foundation-sites": "^6.6.1",
+    "gatsby": "^2.19.24",
+    "gatsby-image": "^2.2.42",
+    "gatsby-plugin-manifest": "^2.2.42",
+    "gatsby-plugin-nprogress": "^2.1.19",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sass": "^2.1.29",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-source-wordpress": "^3.1.63",
+    "gatsby-transformer-sharp": "^2.3.16",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-helmet": "^5.2.1",
+    "react-spring": "^8.0.27",
+    "sass-bem": "^2.6.5",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "cross-env": "^6.0.3",
-    "prettier": "^1.19.1"
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "prettier": "^1.19.1",
+    "resize-observer-polyfill": "^1.5.1"
+  },
+  "keywords": [
+    "gatsby",
+    "WordPress",
+    "Portfolio"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "develop": "gatsby develop",
+    "format": "prettier --write '{gatsby-*.js,src/**/*.{js,jsx}}'",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "now-build": "gatsby build",
+    "build": "rm -rf public && rm -rf .cache && gatsby build",
+    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public ."
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/katie-rose/portfolio"
+    "url": "https://github.com/camiloholguin/gatsby-portfolio"
+  },
+  "bugs": {
+    "url": "https://github.com/camiloholguin/gatsby-portfolio/issues"
   }
 }
